--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,3 +1,4 @@
 <%=@song.name%>
-<%=link_to @genre.name, genre_path(@genre)%>
-<%=link_to @artist.name, genre_path(@artist)%>
+<%=link_to @song.genre.name, genre_path(@song.genre)%>
+#chaining to get the attributes we are looking for. 
+<%=link_to @song.artist.name, genre_path(@song.artist)%>
